--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+// package.json
 {
   "name": "@barchart/aws-lambda-pdf-generator",
   "workspaces": [
@@ -5,7 +6,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/barchart/barchart/aws-lambda-pdf-generator.git"
+    "url": "git+https://github.com/lylakudrow/n8n-demo.git"
   },
   "scripts": {
     "clean": "lerna clean --yes && rm -rf node_modules",
@@ -13,7 +14,8 @@
     "preversion": "git diff --exit-code",
     "release": "lerna version -m 'Release. Bump version number %v' --tag-version-prefix='' --force-publish",
     "deploy:stage": "lerna run deploy:stage --stream",
-    "deploy:prod": "lerna run deploy:prod --stream"
+    "deploy:prod": "lerna run deploy:prod --stream",
+    "test:n8n": "echo \"n8n test placeholder: hook this up to your n8n workflow later\""
   },
   "devDependencies": {
     "jshint": "^2.13.6",
